package domain.source;

public enum AccessModifier {
    PUBLIC,
    PRIVATE,
    PROTECTED,
    PACKAGE_PRIVATE
}
